# VMWithEditor

./: .gitignore  CMakeLists.txt  CRQuestion5.md  LICENSE  README.md  VMWithEditor.sln  buildAll.sh  buildAllDebug.sh  buildAllRelease.sh  buildClean.sh
VMWithEditor/: ARGF_arg_flags.h  CMakeLists.txt  ERH_error_reporting.h  First_code_review_follow_up_Q.md  First_code_review_follow_up_Q_A_by_chux.md  First_code_review_follow_up_Q_A_by_pac.md  HRF_human_readable_program_format.h  LAH_lexical_analyzer.h  OPC_opcode.h  SSF_safe_string_functions.h  VMH_virtual_machine.h  VMWithEditor.vcxproj  VMWithEditor.vcxproj.filters  arg_flags.c  arg_flags.h  buildDebug.sh  buildRelease.sh  common_console_functions.c  common_console_functions.h  common_program_logic.c  common_program_logic.h  control_console.c  control_console.h  default_program.c  default_program.h  error_reporting.c  error_reporting.h  file_io_vm.c  file_io_vm.h  human_readable_program_format.c  human_readable_program_format.h  lexical_analyzer.c  lexical_analyzer.h  main.c  makefile  my_strdup.c  my_strdup.h  opcode.c  opcode.h  parser.c  (+10 more)
VMWithEditor/UnitTests/: .gitignore  buildAllDebug.sh  buildAllRelease.sh  makefile
VMWithEditor/UnitTests/CommandLine_UnitTest/: CommandLine_UnitTest.sln
VMWithEditor/UnitTests/CommandLine_UnitTest/CommandLine_UnitTest/: CMakeLists.txt  CommandLine_UnitTest.vcxproj  CommandLine_UnitTest.vcxproj.filters  buildDebuglog.txt  command_line_unit_test_main.c  command_line_unit_test_main.h  makefile
VMWithEditor/UnitTests/CommandLine_UnitTest/CommandLine_UnitTest/Debug/: vc142.idb
VMWithEditor/UnitTests/Common_UnitTest_Code/: CodeReview.md  UTL_unit_test_logging.h  common_unit_test_logic.c  common_unit_test_logic.h  unit_test_logging.c  unit_test_logging.h
VMWithEditor/UnitTests/ControlConsole_UnitTest/: ControlConsole_UnitTest.sln
VMWithEditor/UnitTests/ControlConsole_UnitTest/ControlConsole_UnitTest/: CMakeLists.txt  ControlConsole_UnitTest.vcxproj  ControlConsole_UnitTest.vcxproj.filters  VMWithEditorConfig.h.in  buildDebuglog.txt  control_console_unit_test_main.c  control_console_unit_test_main.h  makefile
VMWithEditor/UnitTests/ControlConsole_UnitTest/ControlConsole_UnitTest/Debug/: vc142.idb
VMWithEditor/UnitTests/Editor_UnitTest/: Editor_UnitTest.sln
VMWithEditor/UnitTests/Editor_UnitTest/Editor_UnitTest/: CMakeLists.txt  Editor_UnitTest.vcxproj  Editor_UnitTest.vcxproj.filters  Editor_UnitTest_Main.c  Editor_UnitTest_main.h  buildDebuglog.txt  makefile
VMWithEditor/UnitTests/Editor_UnitTest/Editor_UnitTest/Debug/: vc142.idb
VMWithEditor/UnitTests/HRF_UnitTest/: HRF_UnitTest.sln
VMWithEditor/UnitTests/HRF_UnitTest/HRF_UnitTest/: CMakeLists.txt  HRF_UnitTest.vcxproj  HRF_UnitTest.vcxproj.filters  buildDebuglog.txt  hrf_unit_test_main.c  hrf_unit_test_main.h  human_readable_format_unit_test_log_compare.txt  main.c  makefile  unit_test_human_readable_program_format.c  unit_test_human_readable_program_format.h
VMWithEditor/UnitTests/HRF_UnitTest/HRF_UnitTest/x64/Debug/: vc142.idb
VMWithEditor/UnitTests/HRF_UnitTest/HRF_UnitTest/x64/Debug/HRF_UnitTest.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  HRF_UnitTest.lastbuildstate  link.command.1.tlog  link.read.1.tlog  (+1 more)
VMWithEditor/UnitTests/Parser_Unit_Test/: Parser_Unit_Test.sln
VMWithEditor/UnitTests/Parser_Unit_Test/Parser_Unit_Test/: CMakeLists.txt  Parser_Unit_Test.vcxproj  Parser_Unit_Test.vcxproj.filters  buildDebuglog.txt  internal_parser_tests.c  internal_parser_tests.h  makefile  parser_unit_test.c  parser_unit_test.h  parser_unit_test_log_compare.txt  parser_unit_test_main.c  parser_unit_test_main.h  parsert_unit_test_main.c
VMWithEditor/UnitTests/RunAllUnitTests/: RunAllUnitTests.sln
VMWithEditor/UnitTests/RunAllUnitTests/RunAllUnitTests/: CMakeLists.txt  RunAllUnitTests.vcxproj  RunAllUnitTests.vcxproj.filters  buildDebug.sh  buildDebuglog.txt  buildRelease.sh  makefile  run_all_unit_tests_main.c
VMWithEditor/UnitTests/RunAllUnitTests_and_CommonUnitTestCode/: RunAllUnitTests_and_CommonUnitTestCode.sln
VMWithEditor/UnitTests/RunAllUnitTests_and_CommonUnitTestCode/RunAllUnitTests_and_CommonUnitTestCode/: RunAllUnitTests_and_CommonUnitTestCode.vcxproj  RunAllUnitTests_and_CommonUnitTestCode.vcxproj.filters  common_unit_test_logic.c  common_unit_test_logic.h
VMWithEditor/UnitTests/RunAllUnitTests_and_CommonUnitTestCode/RunAllUnitTests_and_CommonUnitTestCode/Debug/: vc142.idb
VMWithEditor/UnitTests/State_Machine_Unit_Test/: State_Machine_Unit_Test.sln
VMWithEditor/UnitTests/State_Machine_Unit_Test/State_Machine_Unit_Test/: CMakeLists.txt  CodeReview_Q1_Part_A_user_G.Sliepen.md  CodeReview_Q1_Part_A_user_chux.md  CodeReview_Q1_Part_B_user_chux.md  State_Machine_Unit_Test.vcxproj  State_Machine_Unit_Test.vcxproj.filters  buildDebuglog.txt  gitdiff.txt  internal_character_transition_unit_tests.c  internal_character_transition_unit_tests.h  internal_sytax_state_tests.c  internal_sytax_state_tests.h  lexical_analyzer_test_data.c  lexical_analyzer_test_data.h  lexical_analyzer_unit_test_log.txt  lexical_analyzer_unit_test_log_for_comparison.txt  lexical_analyzer_unit_test_main.c  lexical_analyzer_unit_test_main.h  lexical_analyzer_unit_test_utilities.c  lexical_analyzer_unit_test_utilities.h  makefile  state_machine_unit_test_main.c  state_machine_unit_test_main.h  syntax_state_machine_unit_test_log.txt  syntax_state_machine_unit_test_log_compare_old.txt  syntax_state_machine_unit_test_log_for_comparison.txt  syntax_state_machine_unit_test_log_for_comparison_old.txt
VMWithEditor/UnitTests/UnitTests/: .gitignore  UnitTests.sln
VMWithEditor/UnitTests/VirtualMachine_UnitTest/: VirtualMachine_UnitTest.sln  buildRelease.sh
VMWithEditor/UnitTests/VirtualMachine_UnitTest/VirtualMachine_UnitTest/: CMakeLists.txt  VirtualMachine_UnitTest.vcxproj  VirtualMachine_UnitTest.vcxproj.filters  buildDebug.sh  buildDebuglog.txt  makefile  virtual_machine_unit_test_main.c  virtual_machine_unit_test_main.h
VMWithEditor/UnitTests/VirtualMachine_UnitTest/VirtualMachine_UnitTest/Debug/: vc142.idb
(+6 files in other folders)
